# sway-kblayout

./: README.md  build.sh  pyproject.toml  requirements-dev.txt  run.py
sway_kblayout/: main.py
