[project]
name = "sway-kblayout"
version = "1.1.0"
description = "Window-aware keyboard layout switcher for SwayWM"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "i3ipc",
]

[project.scripts]
sway-kblayout = "sway_kblayout.main:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
